--- a/dynamischer-stromtarif.ipynb
+++ b/dynamischer-stromtarif.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Vergleich von dynamischen Stromtarif mit Fixpreistarif für einen Standardhaushalt\n",
+    "# Vergleich von dynamischem Stromtarif mit Fixpreistarif für einen Standardhaushalt\n",
     "\n",
     "Solar und Windenergie -- bei allen Vorteilen -- schwanken stark in der Prodkution, was die Netze belastet. \n",
     "Dynamische Stromtarife wie z.B. [Tibber][] oder [Tado Hourly][] (ehemals aWATTar) gelten als Teil der Lösung, \n",
