--- a/dynamischer-stromtarif.ipynb
+++ b/dynamischer-stromtarif.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "# Vergleich von dynamischem Stromtarif mit Fixpreistarif für einen Standardhaushalt\n",
     "\n",
-    "Solar und Windenergie -- bei allen Vorteilen -- schwanken stark in der Prodkution, was die Netze belastet. \n",
+    "Solar und Windenergie -- bei allen Vorteilen -- schwanken stark in der Produktion, was die Netze belastet. \n",
     "Dynamische Stromtarife wie z.B. [Tibber][] oder [Tado Hourly][] (ehemals aWATTar) gelten als Teil der Lösung, \n",
     "indem sie Anreize schaffen, Strom vorzugsweise dann zu verbrauchen, wenn er billig ist. Das ist in der Regel dann,\n",
     "wenn die Sonne scheint und/oder der Wind weht. Bei dynamischen Stromtarifen bezahlt man keinen festen Preis pro \n",
