--- a/src/dynamischer-stromtarif.ipynb
+++ b/src/dynamischer-stromtarif.ipynb
@@ -911,7 +911,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "dynamischer-stromtarif",
    "language": "python",
    "name": "python3"
   },
